# replay_llm_call

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_LLM_REPLAY.md  README_zh.md  docker-compose.middleware.yml  docker-compose.yml  env.sample  main.py  pyproject.toml  setup.cfg
.specify/memory/: constitution.md
docs/: .gitkeep  API_RESTRUCTURE.md  ARCHITECTURE.md  DATABASE_MIGRATIONS.md  LLM_REPLAY_SYSTEM_DESIGN.md  LOGFIRE_LOGGING_INTEGRATION.md  MODEL_NAME_HISTORY_FEATURE.md  SCHEMA_ARCHITECTURE_REFACTOR.md  TEST_LOGS_DETAIL_FIX.md  TEST_LOGS_FILTER_FIX.md  logfire_llm_call_raw_data.json  logfire_raw_data_gemini.json  pydantic-ai-framework.txt
initdb/: create_tables.sql
migrations/: 001_add_temperature_column.sql  002_add_temperature_to_test_logs.sql  003_replace_temperature_with_model_settings.sql  004_add_is_deleted_to_test_cases.sql  005_add_agents_and_regression_tests.sql  006_add_is_deleted_to_regression_tests.sql  007_add_response_example_and_similarity.sql  008_add_response_example_to_test_logs.sql  009_add_evaluation_agent.sql  010_remove_vector_similarity_columns.sql  011_allow_null_is_passed.sql  012_add_regression_evaluation_counts.sql  README.md
scripts/: check_migrations.py  init_database.py  reset_database.py  run_migrations.py  test_temperature_feature.py  test_temperature_logs_database.py
src/: __init__.py
src/agents/: __init__.py  demo_agent.py  eval_agent.py
src/api/: __init__.py  factory.py  middleware.py  pages.py  router.py
src/api/errors/: __init__.py  exception_handlers.py
src/api/schemas/: __init__.py  error.py
src/core/: __init__.py  config.py  embedding.py  error_codes.py  exceptions.py  llm_factory.py  llm_registry.py  logfire_config.py  logger.py  prompt_loader.py
src/models/: __init__.py  agent.py  app_setting.py  base.py  regression_test.py  test_case.py  test_log.py
src/prompts/: __init__.py
src/services/: __init__.py  agent_service.py  demo_service.py  evaluation_service.py  evaluation_settings_service.py  llm_execution_service.py  llm_parser_service.py  regression_test_service.py  task_dispatcher.py  test_case_service.py  test_execution_service.py  test_log_service.py
src/stores/: __init__.py  agent_store.py  app_settings_store.py  database.py  redis_client.py  redis_lock.py  regression_test_store.py  test_case_store.py  test_log_store.py
src/utils/: __init__.py  snowflake_generator.py
static/css/: main.css
static/js/: agents.js  hover-tooltips.js  model-history.js  regression-test-detail.js  regression-tests.js  settings.js  test-cases.js  test-execution.js  test-logs.js
templates/: agent_detail.html  agents.html  base.html  regression_test_detail.html  regression_tests.html  settings.html  test_case_detail.html  test_cases.html  test_execution.html  test_log_detail.html  test_logs.html
tests/: conftest.py  test_agent_service.py  test_evaluation_service.py  test_llm_parser_service.py  test_main.py  test_regression_test_service.py  test_test_case_service.py  test_test_execution_service.py  test_test_log_service.py  test_test_log_store.py
(+34 files in other folders)
